# advent_of_code

./: Cargo.toml  README.md  rustfmt.toml
.aocf/: .gitignore
.cargo/: config
2020/day01-blabla/: Cargo.toml
2020/day01-report_repair/: Cargo.toml
2020/day01-report_repair/src/: bench.rs  lib.rs  main.rs
2020/day02-password_philosophy/: Cargo.toml
2020/day02-password_philosophy/src/: bench.rs  lib.rs  main.rs
2020/day03-toboggan_trajectory/: Cargo.toml
2020/day03-toboggan_trajectory/src/: lib.rs  main.rs
2021/day01-sonar_sweep/: Cargo.toml
2021/day01-sonar_sweep/src/: lib.rs  main.rs
2021/day02-dive!/: Cargo.toml
2021/day02-dive!/src/: lib.rs
2021/day03-binary_diagnostic/: Cargo.toml
2021/day03-binary_diagnostic/src/: lib.rs
2021/day04-giant_squid/: Cargo.toml
2021/day04-giant_squid/src/: lib.rs
2021/day05-hydrothermal_venture/: Cargo.toml
2021/day05-hydrothermal_venture/src/: lib.rs
2022/day01-calorie_counting/: Cargo.toml
2022/day01-calorie_counting/src/: lib.rs
2022/day02-rock_paper_scissors/: Cargo.toml
2022/day02-rock_paper_scissors/src/: lib.rs
2022/day03-rucksack_reorganization/: Cargo.toml
2022/day03-rucksack_reorganization/src/: lib.rs
2022/day04-camp_cleanup/: Cargo.toml
2022/day04-camp_cleanup/src/: lib.rs
2022/day05-supply_stacks/: Cargo.toml
2022/day05-supply_stacks/src/: lib.rs
2022/day06-tuning_trouble/: Cargo.toml
2022/day06-tuning_trouble/src/: lib.rs
2022/day07-no_space_left_on_device/: Cargo.toml
2022/day07-no_space_left_on_device/benches/: solution_crit.rs
2022/day07-no_space_left_on_device/src/: lib.rs
2022/day08-treetop_tree_house/: Cargo.toml
2022/day08-treetop_tree_house/benches/: solution_crit.rs
2022/day08-treetop_tree_house/src/: lib.rs
2023/day01-trebuchet/: Cargo.toml
2023/day01-trebuchet/benches/: solution_crit.rs
2023/day01-trebuchet/src/: lib.rs
2023/day02-cube_conundrum/: Cargo.toml
2023/day02-cube_conundrum/benches/: solution_crit.rs
2023/day02-cube_conundrum/src/: lib.rs
2023/day03-gear_ratios/: Cargo.toml
2023/day03-gear_ratios/benches/: solution_crit.rs
2023/day03-gear_ratios/src/: lib.rs
2023/day04-scratchcards/: Cargo.toml
2023/day04-scratchcards/benches/: solution_crit.rs
2023/day04-scratchcards/src/: lib.rs
2023/day05-if_you_give_a_seed_a_fertilizer/: Cargo.toml
2023/day05-if_you_give_a_seed_a_fertilizer/benches/: solution_crit.rs
2023/day05-if_you_give_a_seed_a_fertilizer/src/: lib.rs
2023/day06-wait_for_it/: Cargo.toml  solve.py
2023/day06-wait_for_it/benches/: solution_crit.rs
2023/day06-wait_for_it/src/: lib.rs
2023/day07-camel_cards/: Cargo.toml
2023/day07-camel_cards/benches/: solution_crit.rs
2023/day07-camel_cards/src/: lib.rs
2023/day08-haunted_wasteland/: Cargo.toml
2023/day08-haunted_wasteland/benches/: solution_crit.rs
2023/day08-haunted_wasteland/src/: lib.rs
2023/day09-mirage_maintenance/: Cargo.toml
2023/day09-mirage_maintenance/benches/: solution_crit.rs
2023/day09-mirage_maintenance/src/: lib.rs
src/: aoc.rs  lib.rs  parts.rs  test_util.rs  utils.rs
template/: Cargo.toml
template/benches/: solution_crit.rs
template/src/: bench.rs  lib.rs  main.rs
xtask/: Cargo.toml
xtask/src/: flags.rs  main.rs
