[package]
name = "aoc"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eyre = "0.6"
tracing = "0.1"

[dev-dependencies]
color-eyre = "0.5"
owo-colors = "3.1"

[workspace]
members = ["20*/day*", "xtask"]
default-members = []
