[package]
name = "aoc"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eyre = "0.6"
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-error = "0.2.0"
color-eyre = "0.6.2"
owo-colors = "3.5"
itertools = "0.10.5"

[workspace]
members = ["20*/day*", "xtask"]
default-members = []
resolver = "2"
