[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6"
color-eyre = "0.5.11"
xshell = "0.1"
xflags = "0.2.1"
time = "0.3.5"
aoc = { path = ".." }
serde = "1.0"
walkdir = "2.3"
inflections = "1.1.1"
itertools = "0.10.1"