[package]
name = "y2020_day1-report_repair"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"

[lib]
path = "src/main.rs"

[dependencies]
aoc = { path = "../.." }
eyre = "0.6"
tracing = "0.1"
itertools = "0.10"
color-eyre = "0.5"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "y2020_day1-report_repair"
harness = false
path = "src/bench.rs"